todo_backend/manifests/todo-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc # Este nombre es el que usa el Frontend en BACKEND_URL
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2346        # Puerto de red interna
      targetPort: 3001  # Puerto de la app Node
